Find plugin only by name and additional optional parameters
